--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "eslint": "^8.23.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.2"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "printWidth": 90,
+    "tabWidth": 2,
+    "useTabs": false,
+    "endOfLine": "lf"
   }
 }
